--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PREDICCION de MOVIMIENTO de PLACAS TECTONICAS</title>
+    <title>PREDICCIóN de MOVIMIENTO de PLACAS TECTóNICAS</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
-    <h1>PREDICCION o PROBABILIDAD de OCURRENCIA</h1>
+    <h1>PREDICCIóN o PROBABILIDAD de OCURRENCIA</h1>
     <label for="latitude">Latitud:</label>
     <input type="number" id="latitude" value="-33.45"><br><br>
 
