--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <h1>PREDICCIóN o PROBABILIDAD de OCURRENCIA</h1>
+    <h1> OCURRENCIA</h1>
     <label for="latitude">Latitud:</label>
     <input type="number" id="latitude" value="-33.45"><br><br>
 
@@ -20,7 +20,7 @@
     <input type="number" id="magnitude" value="4.5"><br><br>
 
     <label for="depth">Profundidad:</label>
-    <input type="number" id="depth" value="10.0"><br><br>
+    <input type="number" id="depth" value="100.0"><br><br>
 
     <button onclick="predictEarthquake()">Predecir</button>
 
@@ -63,4 +63,33 @@
         }
     </script>
 </body>
+    <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Limitaciones y Consideraciones</title>
+    <style>
+        .centrado {
+            text-align: center;
+            margin-top: 20px; /* Espacio entre el texto y lo que está arriba */
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Aquí puedes agregar otros elementos que quieras que estén encima del texto -->
+
+    <div class="centrado">
+        <h2>Limitaciones y Consideraciones</h2>
+        <ul>
+            <li><b>Falsa alarma:</b> Este modelo de predicción de terremotos puede generar falsas alarmas, lo que puede causar pánico y disrupción.</li>
+            <li><b>Precisión limitada:</b> No se puede garantizar la precisión.</li>
+            <li><b>Responsabilidad:</b> Esta aplicación se trata de una estimación de probabilidad y no de una predicción definitiva.</li>
+        </ul>
+    </div>
+
+</body>
+</html>
+
 </html>
