--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <h1> OCURRENCIA</h1>
+    <h1> PREDICCIóN de MOVIMIENTO de PLACAS TECTóNICAS</h1>
     <label for="latitude">Latitud:</label>
     <input type="number" id="latitude" value="-33.45"><br><br>
 
@@ -63,6 +63,9 @@
         }
     </script>
 </body>
+
+
+    
     <!DOCTYPE html>
 <html lang="es">
 <head>
