--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +9,18 @@
     
 </head>
 <body>
-    <h1> PREDICCIóN de MOVIMIENTO de PLACAS TECTóNICAS</h1>
-    <label for="latitude">Latitud:</label>
+    <h1> MOVIMIENTO de PLACAS TECTóNICAS</h1>
+    
+    <label for="latitude">Latitud S:</label>
     <input type="number" id="latitude" value="-33.45"><br><br>
 
-    <label for="longitude">Longitud:</label>
+    <label for="longitude">Longitud O:</label>
     <input type="number" id="longitude" value="-70.67"><br><br>
 
-    <label for="magnitude">Magnitud:</label>
+    <label for="magnitude">Magnitud ºR:</label>
     <input type="number" id="magnitude" value="4.5"><br><br>
 
-    <label for="depth">Profundidad:</label>
+    <label for="depth">Profundidad km:</label>
     <input type="number" id="depth" value="100.0"><br><br>
 
     <button onclick="predictEarthquake()">Predecir</button>
@@ -81,7 +82,7 @@
 </head>
 <body>
 
-    <!-- Aquí puedes agregar otros elementos que quieras que estén encima del texto -->
+    <!-- Aquí agregar otros elementos que quieras que estén encima del texto -->
 
     <div class="centrado">
         <h2>Limitaciones y Consideraciones</h2>
